--- a/index.html
+++ b/index.html
@@ -2,43 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | E-commerce product page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<nav class="nav__menu">
+<svg width="16" height="15" class="nav__menu-icon" xmlns="http://www.w3.org/2000/svg"><path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd"/></svg>
+  <img class="logo" src="images/logo.svg" alt="logo">
+  <div class="nav__list-menu">
+    <img class="nav-close" src="images/icon-close.svg" alt="nav close icon">
+  <ul class="nav__list">
+    <li class="nav__items"> <a href="#collections">Collections</a></li>
+    <li class="nav__items"> <a href="#collections">Men</a></li>
+    <li class="nav__items"> <a href="#collections">Women</a></li>
+    <li class="nav__items"> <a href="#collections">About</a></li>
+    <li class="nav__items"> <a href="#collections">Contact</a></li>
+  </ul> 
+  </div>
+  <svg width="22" height="20" class="cart-icon" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/></svg>
+  <img class="avatar" src="./images/image-avatar.png" alt="profile avatar">
+</nav>
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+<div class="shopping-cart">
+<h1>Cart</h1>
+<hr>
+<div class="cart-items">
+  <p>Your cart is empty</p>
+</div>
+</div>
 
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
+<main>
+<div class="product">  
+<img src="./images/image-product-1.jpg" alt="product image">
+<img src="images/image-product-2.jpg" alt="product image">
+<img src="images/image-product-3.jpg" alt="product image">
+<img src="images/image-product-4.jpg" alt="product image">
+</div>
+<div class="product__thumbnail">
+  <img src="images/image-product-1-thumbnail.jpg" alt="product image thumbnail">
+  <img src="images/image-product-2-thumbnail.jpg" alt="product image thumbnail">
+  <img src="images/image-product-3-thumbnail.jpg" alt="product image thumbnail">
+  <img src="images/image-product-4-thumbnail.jpg" alt="product image thumbnail">
+</div>
+<div class="product__nav-icons">
+<img src="./images/icon-previous.svg" alt="previus product image">
+<img src="./images/icon-next.svg" alt="product next image">
+</div>
   
+  <div class="product__description">
+  <p class="d__company-name">Sneaker Company</p>
+
+  <h1 class="p__description-title">Fall Limited Edition Sneakers</h1>
+
+  <p class="p-text">These low-profile sneakers are your perfect casual wear companion. Featuring a 
+  durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+
+  <div class="prices">
+  <p class="price">$125.00</p>
+  <p class="discount">50%</p>
+  <p class="old-price">$250.00</p>
+  </div>
+
+  <button class="cart__toggle-btn"><span><img src="./images/icon-minus.svg" alt=""></span>0<span><img src="./images/icon-plus.svg" alt=""></span></button>
+  <button class="add__to-cart"><span><svg width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#fff" fill-rule="nonzero"/></svg>
+ </span> Add to cart</button>
+  </div>
+
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+</main>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
