--- a/index.html
+++ b/index.html
@@ -46,30 +46,19 @@ $125.00 <span class="count">x3</span> <span class="total-amt">$375.00</span></p>
 <main>
     
 <div class="product">  
-  <ul class="product-items">
-    <li>
+  <div class="product-items">
 <img class="product-image" src="./images/image-product-1.jpg" alt="product image">
-    </li>
-    <li>
-<!-- <img class="product-image" src="images/image-product-2.jpg" alt="product image">
-    </li>
-    <li>
-<img class="product-image" src="images/image-product-3.jpg" alt="product image">
-    </li>
-    <li>
-<img class="product-image" src="images/image-product-4.jpg" alt="product image">
-</li> -->
-  </ul>
+  </div>
 <div class="product__thumbnail">
-  <img class="thumbnail-img" src="images/image-product-1-thumbnail.jpg" alt="product image thumbnail">
-  <img class="thumbnail-img" src="images/image-product-2-thumbnail.jpg" alt="product image thumbnail">
-  <img class="thumbnail-img" src="images/image-product-3-thumbnail.jpg" alt="product image thumbnail">
-  <img class="thumbnail-img" src="images/image-product-4-thumbnail.jpg" alt="product image thumbnail">
+  <img class="thumbnail-img thumbnail active" src="images/image-product-1-thumbnail.jpg" alt="product image thumbnail">
+  <img class="thumbnail-img thumbnail" src="images/image-product-2-thumbnail.jpg" alt="product image thumbnail">
+  <img class="thumbnail-img thumbnail" src="images/image-product-3-thumbnail.jpg" alt="product image thumbnail">
+  <img class="thumbnail-img thumbnail" src="images/image-product-4-thumbnail.jpg" alt="product image thumbnail">
 </div>
 </div>
 <div class="product__nav-icons">
-<img src="./images/icon-previous.svg" alt="previus product image">
-<img src="./images/icon-next.svg" alt="product next image">
+<img class="nav__btn-left" src="./images/icon-previous.svg" alt="previus product image">
+<img class="nav__btn-right" src="./images/icon-next.svg" alt="product next image">
 </div>
   
   <div class="product__description">
